# nebula-backend

./: .gitignore  Dockerfile  README.md  celerybeat-schedule.db  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 023ac2b0c826_added_foreign_key_mapping.py  15436d808394_updated_encryption_models.py  195f79c24ff3_upgrade_model.py  32bf20f4d961_initial_migration.py  3f06534fe231_updated_stats_model.py  4bae3c93c3be_added_db_indexing_on_the_models.py  8cc632fd8e50_added_cid_for_premium_prompts.py  9f0c709a6cf8_added_video_url.py  ce3ca30a6baa_added_encryption.py  ceb9488bf40e_updated_model_relationships_between_.py  e5b0292f533a_added_encryption.py  fb19deaccd3e_added_cid_for_premium_prompts_and_set_.py
app/: main.py
app/celery/: celery.py
app/core/: constants.py  database.py
app/encrypt/: helpers.py  models.py  routes.py  schemas.py
app/leaderboard/: models.py  routes.py
app/marketplace/: routes.py  schemas.py
app/prompts/: models.py  routes.py  schemas.py
app/socialfeed/: models.py  routes.py  schemas.py  services.py
scripts/: git.sh
tests/: locustfile.py
tests/html/: index.html
