[tool.poetry]
name = "artemis-aptos-backend"
version = "0.1.0"
description = "Artemis Aptos backend"
authors = ["mannyuncharted <omoebun52@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.6"
psycopg2-binary = "^2.9.10"
cryptography = "^43.0.1"
locust = "^2.31.5"
celery = "^5.4.0"
redis = "^5.0.8"
aioredis = "^2.0.1"
scalar-fastapi = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
